23/10/12 첫번째 수정

--- a/index.html
+++ b/index.html
@@ -70,40 +70,26 @@
         </div>
   
         <div class="content1">
-          <ul>
-            <li>
-              <a href="#none">
-                <h3>Flat Design</h3>
-                <p>플랫디자인(Flat Design)이란 복잡한 그래픽 효과를 배제하고 단순한 색상과 구성을 통해 직관적인 인식이
-                가능하도록 구성하는 2차원 디자인 방식을 말한다.</p>
-              </a>
-            </li>
+          <ul class="one">
+            <li><img src="image/Group1.svg" alt="heart"></li>
+            <li>Flat Design</li>
+            <li>복잡한 그래픽 효과를 배제하고 단순한 색상과 구성의 2차원 디자인 방식을 말한다.</li>
           </ul>
-          <ul>
-            <li>
-              <a href="#none">
-                <h3>material design</h3>
-                <p>물질의 질감이나 광원 효과, 그림자 효과 등을 통해 깊이를 더한 것으로 디자인보다는 단순하고 편
-                리한 기술 개발에 주력했던 구글이 디자인을 중점으로 개편 하면서 발표한 것이다</p>
-              </a>
-            </li>
+          <ul class="two">
+            <li>물질의 질감이나 광원 효과, 그림자 효과 등을 통해 깊이를 더한 것이다.</li>
+            <li>material design</li>
+            <li><img src="image/Group2.svg" alt="star"></li>
           </ul>
-          <ul>
-            <li>
-              <a href="#none">
-                <h3>card Design</h3>
-                <p>모듈 방식으로 정렬하여 각 항목을 쉽게 볼 수 있다. 그리드(Grid)형 레이아웃을 기반으로 한 디자인이며 구글 나우(Google now)나 핀터레스트(Pinterest)에서 사용하고 있다.</p>
-              </a>
-            </li>
+          <ul class="three">
+              <li><img src="image/Group3.svg" alt="card"></li>
+              <li>card Design</li>
+              <li>그리드(Grid)형 레이아웃을 기반으로 한 디자인이며 핀터레스트(Pinterest)에서 사용하고 있다.</li>
           </ul>
-          <ul>
+          <ul class="four">
             <li>
-              <a href="#none">
-                <h3>Neumorphism</h3>
-                <p>플랫&미니멀리즘의 대안으로 뉴모피즘(New+Skeuomorphism)이 유행하고 있다.
-                  플랫하고 미니멀한 디자인으로는 다양한 데이터와 인터렉션을 표현하기 복잡하고 제한적이다. </p>
-              </a>
-            </li>
+              다양한 데이터와 인터렉션을 표현하기 위해 복잡하고 제한적이다. </li>
+            <li>Neumorphism</li>
+            <li><img src="image/Group4.svg" alt="diamond"></li>
           </ul>
         </div>
         <div class="footer">
